fixed align-tems: start webpack conflict causing deployment issues

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -29,7 +29,7 @@ body {
   background-color: #23252c;
   max-width: 550px;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   height: 868px;
   width: 450px;
