--- a/src/styles/scss/partials/_card.scss
+++ b/src/styles/scss/partials/_card.scss
@@ -2,7 +2,7 @@
   background-color: #23252c;
   max-width: 550px;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   height: 868px;
   width: 450px;
